--- a/index.html
+++ b/index.html
@@ -68,10 +68,184 @@
 </section>
 
 
+<!--about-->
+<section class="about" id="about">
+
+    <div class="image">
+        <img src="img/about.png" alt="">
+    </div>
+
+    <div class="content">
+        <h3>Bienvenidos a nuestro restaurante</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nisi architecto in eveniet repellendus quo. Enim at harum architecto, cum consequatur nobis esse incidunt error, quasi numquam dolor eius asperiores!</p>
+        <a href="#" class="btn">Leer más</a>
+        <div class="icons-container">
+            <div class="icons">
+                <img src="img/about-1.png" alt="">
+                <h3>Buena comida</h3>
+            </div>
+            <div class="icons">
+                <img src="img/about-2.png" alt="">
+                <h3>Chef expertos</h3>
+            </div>
+            <div class="icons">
+                <img src="img/about-3.png" alt="">
+                <h3>Comida y bebidas</h3>
+            </div>
+    </div>
+</section>
 
 
+<!--food-->
 
+<section class="food" id="food">
+    <div class="heading">
+        <span>Platos destacados</span>
+        <h3>Nuestras exquisitas comidas</h3>
+    </div>
 
+    <div class="swiper food-slider">
+
+        <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide" data-name="food-1">
+                <img src="img/food-1.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+            <div class="swiper-slide slide" data-name="food-2">
+                <img src="img/food-2.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+            <div class="swiper-slide slide" data-name="food-3">
+                <img src="img/food-3.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+            <div class="swiper-slide slide" data-name="food-4">
+                <img src="img/food-4.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+            <div class="swiper-slide slide" data-name="food-5">
+                <img src="img/food-5.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+            <div class="swiper-slide slide" data-name="food-6">
+                <img src="img/food-6.png" alt="">
+                <h3>Deliciosas comidas</h3>
+                <div class="price">$5200</div>
+            </div>
+
+        </div>
+
+      <div class="swiper-pagination"></div>
+
+    </div>
+</section>
+
+<!--foodd-->
+<section class="food-preview-container">
+
+    <div id="close-preview" class="fas fa-times"></div>
+
+    <div class="food-preview active" data-target="food-1">
+        <img src="img/food-1.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+
+    <div class="food-preview" data-target="food-2">
+        <img src="img/food-2.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+
+    <div class="food-preview" data-target="food-3">
+        <img src="img/food-3.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+
+    <div class="food-preview" data-target="food-4">
+        <img src="img/food-4.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+
+    <div class="food-preview" data-target="food-5">
+        <img src="img/food-5.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+
+    <div class="food-preview" data-target="food-6">
+        <img src="img/food-6.png" alt="">
+        <h3>Comidas deliciosas</h3>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
+        <div class="price">$4370</div>
+        <a href="#" class="btn">Comprar ahora</a>
+    </div>
+</section>
 
 
 
