--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             </div>
           </div>
         </div>
-        <input type="submit" value="order now" class="btn">
+        <input type="submit" value="orden" class="btn">
     </form>
 
 </section>
